add some more rendering options